--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             margin: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -17,10 +18,23 @@
         h1 {
             font-size: 3rem;
             color: #333;
+            margin-bottom: 10px;
+        }
+        h2 {
+            font-size: 1.5rem;
+            color: #666;
+            margin: 0;
+        }
+        img {
+            max-width: 80%; /* Ensures image scales well */
+            height: auto;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <h1>BasedWizard</h1>
+    <h2>A Powerful AI</h2>
+    <img src="thebasedwizard.webp" alt="BasedWizard Logo">
 </body>
 </html>
