--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chat – Based Wizard</title>
   <link rel="stylesheet" href="css/style.css" />
-  <!-- Include ethers.js if you wish to check wallet connection here too -->
+  <!-- Include ethers.js for wallet detection -->
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
 </head>
 <body>
