--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Payment – Based Wizard</title>
   <link rel="stylesheet" href="css/style.css" />
-  <!-- Include ethers.js for payment functionality -->
+  <!-- Include ethers.js -->
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -26,7 +26,7 @@
       <p id="walletAddress"></p>
     </div>
     <div class="payment-container">
-      <p>Click the button below to send 1,000 Based Wizard tokens.</p>
+      <p>Click the button below to send 1,000 Based Wizard tokens to complete your payment.</p>
       <button id="payButton">Pay 1000 Based Wizard</button>
     </div>
   </main>
